fix: change width and gaps

--- a/src/components/courses/Courses.scss
+++ b/src/components/courses/Courses.scss
@@ -23,8 +23,9 @@
     display: grid;
     grid-template-columns: repeat(6, 1fr);
     grid-template-rows: repeat(2, 1fr);
-    gap: 32px;
-    justify-items: center;
+    column-gap: 16px;
+    row-gap: 16px;
+    justify-items: stretch;
     width: 100%;
     margin: 0 0 60px 0;
     padding: 0;
@@ -32,7 +33,6 @@
   }
 
   &__item{
-    width: 160px;
     height: 120px;
     box-sizing: border-box;
     display: flex;
